# COMMIT

./: .gitattributes  .gitignore  CHANGELOG.md  COMMIT_Config.m  COMMIT_Setup.m  COMMIT_Setup.txt  DATA_Load.m  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_operator.py
.github/workflows/: build_wheels.yml  publish_on_pypi.yml  run_tests.yml
c++/: CMakeLists.txt
c++/CMake/: FindBLITZ.cmake  FindNIFTI.cmake
c++/COMMIT_debugger/: CMakeLists.txt  main.cxx
c++/include/: COLOR_ui.h  NIFTI.h  ProgressBar.h  SH.h  TrackVis.h  VECTOR.h
c++/tck2trk/: CMakeLists.txt  main.cxx
c++/trk2dictionary/: CMakeLists.txt  main.cxx
commit/: __init__.py  bundle_o_graphy.pxd  bundle_o_graphy.pyx  core.py  core.pyx  core.py~  core_orig.pyx  cudaoperator.pyx  gpumanager.cu  gpumanager.cuh  info.py  lut.py  models.py  models.pyx  operatorGPU.py  operator_withCUDA.cu  operator_withCUDA.cuh  proximals.pyx  scheme.py  solvers.py
commit/cudaoperator/: operator.pyx  operator_withCUDA.cu  operator_withCUDA.cuh
commit/operator/: config.py  operator.pyx  operator.pyxbld  operator_c.c  operator_noLUT.c  operator_noLUT_original.c  operator_withLUT.c  operator_withRegularization.c
commit/spline_smoothing/: Catmull.h  setup.py  spline_smoothing.pyx  spline_smoothing_c.cpp
commit/spline_smoothing/psimpl_v7_src/: _DS_Store
commit/spline_smoothing/psimpl_v7_src/doc/: annotated.html  classes.html  classpsimpl_1_1_polyline_simplification-members.html  classpsimpl_1_1_polyline_simplification.html  classpsimpl_1_1_polyline_simplification_1_1_d_p_helper-members.html  classpsimpl_1_1_polyline_simplification_1_1_d_p_helper.html  classpsimpl_1_1util_1_1scoped__array-members.html  classpsimpl_1_1util_1_1scoped__array.html  dir_f9993e17f36afaef24d7a404e932861e.html  dirs.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacepsimpl.html  namespacepsimpl_1_1math.html  namespacepsimpl_1_1util.html  namespaces.html  navtree.js  psimpl_8h.html  psimpl_8h_source.html  structpsimpl_1_1_polyline_simplification_1_1_d_p_helper_1_1_key_info-members.html  structpsimpl_1_1_polyline_simplification_1_1_d_p_helper_1_1_key_info.html  structpsimpl_1_1_polyline_simplification_1_1_d_p_helper_1_1_sub_poly-members.html  structpsimpl_1_1_polyline_simplification_1_1_d_p_helper_1_1_sub_poly.html  structpsimpl_1_1_polyline_simplification_1_1_d_p_helper_1_1_sub_poly_alt-members.html  structpsimpl_1_1math_1_1_statistics-members.html  (+2 more)
commit/trk2dictionary/: ProgressBar.h  Vector.h  trk2dictionary.cpp  trk2dictionary.pyx  trk2dictionary_c.cpp
dictionary/: .gitignore  COMMIT_LoadDictionary.m  COMMIT_MakeOperator.m  COMMIT_MakeOperator_A.cpp  COMMIT_MakeOperator_A.mexmaci64  COMMIT_MakeOperator_At.cpp  COMMIT_MakeOperator_At.mexmaci64  COMMIT_SetThreads.m  DICTIONARY_LoadSegments.m  DICTIONARY_MakeOperator.m  DICTIONARY_MakeOperator_A.cpp  DICTIONARY_MakeOperator_A.mexmaci64  DICTIONARY_MakeOperator_At.cpp  DICTIONARY_MakeOperator_At.mexmaci64
doc/: COMMIT_debugger.md  README.md  commands.md  conventions.md  extras.md  faq.md  install.md  models.md
doc/demos/: README.md
doc/demos/STN96/: README.md  main.m  step1_LIFE.m  step2_COMMIT.m  step3_compare.m
doc/tutorials/: README.md
doc/tutorials/AdvancedSolvers/: README.md  tutorial_solvers.ipynb
doc/tutorials/DecreasingResolution/: README.md
doc/tutorials/GettingStarted/: README.md
doc/tutorials/LiFE_STN96/: README.md
docs/: COMMIT_debugger.md  README.md  conventions.md  faq.md  install.md  models.md
docs/tutorials/: README.md
docs/tutorials/AdvancedSolvers/: README.md  tutorial_solvers.ipynb
docs/tutorials/CudaAcceleration/: README.md
docs/tutorials/GettingStarted/: README.md
docs/tutorials/LiFE_STN96/: README.md
extras/: CMakeLists.txt
extras/COMMIT_debugger/: OPENGL_callbacks.cxx  OPENGL_utils.h  main.cxx
extras/include/: COLOR_ui.h  NIFTI.h  TrackVis.h  colormaps.h
kernels/: .gitignore  COMMIT_Cart2sphere.m  COMMIT_CreateHighResolutionScheme.m  COMMIT_CreateYlm.m  COMMIT_GenerateKernels.m  COMMIT_PrecomputeRotationMatrices.m  COMMIT_ResampleKernel.m  COMMIT_ResampleKernels.m  COMMIT_RotateKernel.m  KERNELS_ActiveAx_Generate.m  KERNELS_ActiveAx_RotateAndSave.m  KERNELS_CreateFolderForHighResolutionKernels.m  KERNELS_Load.m  KERNELS_LoadScheme.m  KERNELS_PrecomputeRotationMatrices.m  KERNELS_ProcessAtoms.m  KERNELS_StickZeppelinBall_Generate.m  cart2sphere.m  createYlm.m  resample_iso_kernel.m  rotate_kernel.m
kernels/StickZeppelinBall/: A_001.npy  A_002.npy  A_003.npy
models/: COMMIT_ACTIVEAX.m  COMMIT_STICKZEPPELINBALL.m
optimization/: COMMIT_Fit.m  COMMIT_PlotSolverStatus.m  COMMIT_SaveResults.m  COMMIT_SetSolver.m  OPTIMIZATION_SaveResults.m  OPTIMIZATION_Setup.m  OPTIMIZATION_Solve.m
other/: COMMIT_LoadData.m  COMMIT_LoadScheme.m  COMMIT_SetModel.m  COMMIT_SetSubject.m
tests/: test_demo.py
