[metadata]
name = dmri-commit
version = 2.0.3
url = https://github.com/daducci/COMMIT
download_url = https://pypi.org/project/dmri-commit
project_urls =
    Homepage = https://github.com/daducci/COMMIT
    Documentation = https://github.com/daducci/COMMIT/wiki
    Source = https://github.com/daducci/COMMIT
    Changelog = https://github.com/daducci/COMMIT/blob/master/CHANGELOG.md
    Download = https://pypi.org/project/dmri-commit
    Tracker = https://github.com/daducci/COMMIT/issues
author = Alessandro Daducci
author_email = alessandro.daducci@univr.it
maintainer = Alessandro Daducci
maintainer_email = alessandro.daducci@univr.it
classifiers =
    Topic :: Scientific/Engineering :: Image Processing
    License :: Other/Proprietary License
    Programming Language :: Cython
    Programming Language :: Python
    Operating System :: OS Independent
    Intended Audience :: Science/Research
license = Proprietary License
license_files = LICENSE
description = Convex Optimization Modeling for Microstructure Informed Tractography (COMMIT)
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    Neuroimaging
    Diffusion MRI
    Microstructure Imaging

[options]
zip_safe = False
install_requires =
    numpy>=1.19.5
    scipy>=1.5.4
    dmri-dicelib>=1.0.3
    dmri-amico>=2.0.1
    importlib-metadata>=4.8.3; python_version<"3.8"
python_requires = >=3.6
packages =
    commit
    commit.operator
    commit.trk2dictionary
include_package_data = False

[options.package_data]
commit.operator =
    *.pyxbld

[bdist_wheel]
universal = 1

[egg_info]
egg_base = build
